--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
   "devDependencies": {},
   "scripts": {
     "start" : "node index.js",
+    "build": "npm i",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
